# dagster-gospels

./: LICENSE  README.md  pyproject.toml
dagster_gospels/: __init__.py
dagster_gospels/asset/: create.py
dagster_gospels/assets/: create.py  john.py  luke.py  mark.py  matthew.py
dagster_gospels/constants/: urls.py
tests/: conftest.py  test_hello.py
